force-app/main/default/objects/Case_File__c/Case_File__c.object-meta.xml
<CustomObject>
    <label>Case File</label>
    <nameField>
        <displayFormat>CFN-{YY}{MM}{dd}{00}</displayFormat>
        <label>Case File No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>