force-app/main/default/objects/Case_File__c/fields/DateOpened__c.field-meta.xml
<CustomField>
    <fullName>DateOpened__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>