force-app/main/default/objects/Case_File__c/fields/EnquiryNo__c.field-meta.xml
<CustomField>
    <fullName>EnquiryNo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EnquiryNo.</label>
    <referenceTo>Enquiry__c</referenceTo>
    <relationshipLabel>Case Files</relationshipLabel>
    <relationshipName>Case_Files</relationshipName>
    <type>Lookup</type>
</CustomField>