force-app/main/default/objects/Case_File__c/fields/FA_Type__c.field-meta.xml
<CustomField>
    <fullName>FA_Type__c</fullName>
    <label>FA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AIC - SMF</fullName>
            </value>
            <value>
                <fullName>SGE - ATF</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>