force-app/main/default/objects/Case_File__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake No.</label>
    <referenceTo>Intake__c</referenceTo>
    <relationshipLabel>Case Files</relationshipLabel>
    <relationshipName>Case_Files</relationshipName>
    <type>Lookup</type>
</CustomField>