force-app/main/default/objects/Case_File__c/fields/Issues__c.field-meta.xml
<CustomField>
    <fullName>Issues__c</fullName>
    <label>Issues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Counseling</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Financial Assistance</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>I&amp;R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>