force-app/main/default/objects/Case_File__c/recordTypes/ISS.recordType-meta.xml
<RecordType>
    <fullName>ISS</fullName>
    <active>true</active>
    <description>This record type is for ISS cases</description>
    <label>ISS</label>
</RecordType>