force-app/main/default/objects/Case_File__c/recordTypes/Long_Term.recordType-meta.xml
<RecordType>
    <fullName>Long_Term</fullName>
    <active>true</active>
    <description>This record type is for long term engagement like when financial assistance or employment support is required</description>
    <label>Long Term</label>
</RecordType>