force-app/main/default/objects/Case_File__c/recordTypes/Short_Term.recordType-meta.xml
<RecordType>
    <fullName>Short_Term</fullName>
    <active>true</active>
    <description>This record type is for short term engagement like when it is opened and closed on the same day</description>
    <label>Short Term</label>
</RecordType>