force-app/main/default/objects/Case_File__c/listViews/ISS_Cases.listView-meta.xml
<ListView>
    <fullName>ISS_Cases</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Client_Name__c</columns>
    <columns>Case_Status__c</columns>
    <columns>DateOpened__c</columns>
    <columns>Date_Closed__c</columns>
    <columns>Issues__c</columns>
    <columns>FA_Type__c</columns>
    <columns>EnquiryNo__c</columns>
    <columns>Intake__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case_File__c.ISS</value>
    </filters>
    <label>ISS Cases</label>
</ListView>